Error has been resolved. Here is the working CRUD system I made with a tutorial.
I see tons of red underline errors but I can run the system perfectly.

--- a/CRUD_MVC_12_10_2021_1132/Views/Employee/Delete.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Employee/Delete.cshtml
@@ -11,6 +11,38 @@
     <h4>EMPLOYEEMASTER</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.EMPCODE)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EMPCODE)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EMPNAME)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EMPNAME)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DESIGNATION)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DESIGNATION)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SALARY)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SALARY)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
