--- a/CRUD_MVC_12_10_2021_1132/Views/Employee/Details.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Employee/Details.cshtml
@@ -10,9 +10,41 @@
     <h4>EMPLOYEEMASTER</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.EMPCODE)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EMPCODE)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EMPNAME)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EMPNAME)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DESIGNATION)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DESIGNATION)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SALARY)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SALARY)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
