--- a/CRUD_MVC_12_10_2021_1132/Views/Shared/_Layout.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -23,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Employee Master", "Index", "Employee")</li>
+                    <li>@Html.ActionLink("Employee Master CRUD", "Index", "Employee")</li> 
                 </ul>
             </div>
         </div>
