--- a/CRUD_MVC_12_10_2021_1132/Views/Employee/Details.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Employee/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>EMPLOYEEMASTER</h4>
+    <h4>Read Employee</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
