--- a/CRUD_MVC_12_10_2021_1132/Views/Employee/Edit.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Employee/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EMPLOYEEMASTER</h4>
+        <h4>Edit Employee</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
