--- a/CRUD_MVC_12_10_2021_1132/Views/Shared/_Layout.cshtml
+++ b/CRUD_MVC_12_10_2021_1132/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css"/>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -24,7 +25,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Employee Master CRUD", "Index", "Employee")</li> 
+                    <li>@Html.ActionLink("Employee Master CRUD", "Index", "Employee")</li>
+                    
                 </ul>
             </div>
         </div>
